--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/http": "5.0.0",
     "@angular/platform-browser": "5.0.0",
     "@angular/platform-browser-dynamic": "5.0.0",
-    "@ionic-native/core": "4.3.2",
+    "@ionic-native/camera": "^3.9.2",
+    "@ionic-native/core": "^3.9.2",
+    "@ionic-native/local-notifications": "^3.9.2",
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/storage": "2.1.3",
@@ -52,7 +54,8 @@
       "cordova-plugin-whitelist": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {}
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-camera": {}
     },
     "platforms": [
       "android"
