--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ionic-native/camera": "^3.9.2",
     "@ionic-native/core": "^3.9.2",
     "@ionic-native/local-notifications": "^3.9.2",
+    "@ionic-native/network": "^3.9.2",
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/storage": "2.1.3",
@@ -55,7 +56,8 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-camera": {}
+      "cordova-plugin-camera": {},
+      "cordova-plugin-network-information": {}
     },
     "platforms": [
       "android"
